--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,19 @@
 name: CI Pipeline
-on: [push, pull_request]
+
+on:
+  push:
+  pull_request:
 
 jobs:
-  build-and-test:
+  test:
     runs-on: ubuntu-latest
+
     steps:
-      
-uses: actions/checkout@v3
-name: Use Node.js
-    uses: actions/setup-node@v3
-    with:
-      node-version: '20'
-run: npm install
-name: Run tests
-run: npm test
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - run: npm install
+      - run: npm test
